--- a/NeonMsAuth/src/main/resources/neonOauth.properties
+++ b/NeonMsAuth/src/main/resources/neonOauth.properties
@@ -1,5 +1,5 @@
-app.clientId=0506e1d5-040c-4abb-acda-089dfcd940b2
-app.clientSecret=11eded62-b619-4c3c-a2a1-ce5d352f416d
+app.clientId=b002cff1-db45-4bea-8a00-8c39eba36436
+app.clientSecret=Pcc8Q~EcmDzfld9AxjGUT8DmhWDCqkYbOS1JIbQf
 app.tenantId=fbf47054-0b5c-48f7-935f-ecd5b66f2229
 app.authTenant=common
 app.graphUserScopes=user.read,mail.read,mail.send
