--- a/NeonMsAuth/src/main/resources/neonOauth.properties
+++ b/NeonMsAuth/src/main/resources/neonOauth.properties
@@ -1,5 +1,5 @@
-app.clientId=b002cff1-db45-4bea-8a00-8c39eba36436
-app.clientSecret=Pcc8Q~EcmDzfld9AxjGUT8DmhWDCqkYbOS1JIbQf
+app.clientId=b877e0ca-5c83-4656-9d48-fce896eabea5
+app.clientSecret=kdi8Q~j~-0pRbNhfiT9dPjZqazmjMj_V7ueyEdzz
 app.tenantId=fbf47054-0b5c-48f7-935f-ecd5b66f2229
 app.authTenant=common
 app.graphUserScopes=user.read,mail.read,mail.send
